[BFN] KRAFUNC-188 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6588 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-meeting.html
+++ b/kra-com-dev/irb-meeting.html
@@ -518,7 +518,16 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     	Slusar, Andrew
                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                     </td>
-                    <td>Alternate for Dan Dwyer</td>
+                    <td>
+                    	Alternate for 
+                        <select>
+                            <option value="0">select</option>
+                            <!--<option value="1">DeStefano, Michelle</option>-->
+                            <option value="2" selected="selected">Dwyer, Dan</option>
+                            <!--<option value="3">Hutchinson, Bryan</option>-->
+                            <option value="4">Smith, Carolyn</option>
+                        </select>
+                    </td>
                     <td style="text-align:center;">
                     	<input src="../images/tinybutton-markabsent.gif" onclick="javascript: alert('This would move this person to the Absent sub-panel.'); return false" class="tinybutton" alt="absent" title="Mark Absent" type="image" />
                     </td>
@@ -574,8 +583,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                     </td>
                     <td>
-                    	Alternate for Bryan Hutchinson
-                        <input name="x" src="../images/book_open.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
+                    	Alternate
                     </td>
                     <td style="text-align:center;">
                     	<input src="../images/tinybutton-markpresent.gif" onclick="javascript: alert('This would move this person to the Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
@@ -585,6 +593,17 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 	<th>2</th>
                     <td>
                     	Smith, Carolyn
+                        <input name="x" src="../images/book_open.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
+                    </td>
+                    <td>Member</td>
+                    <td style="text-align:center;">
+                    	<input src="../images/tinybutton-markpresent.gif" onclick="javascript: alert('This would move this person to the Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
+                    </td>
+                </tr>
+                <tr>
+                	<th>3</th>
+                    <td>
+                    	Dwyer, Dan
                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                     </td>
                     <td>Member</td>
