[BFN] KRAFUNC-183 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6590 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-editor.html
+++ b/BFN/questionnaire-editor.html
@@ -1451,9 +1451,10 @@
                             <td class="content_info" style="text-align:left;">
                                 <select style="width:100%;">
                                     <option value="0" selected="selected">select</option>
-                                    <option value="1">lorem</option>
-                                    <option value="2">ipsum</option>
-                                    <option value="3">nolar</option>
+                                    <option value="1">IRB</option>
+                                    <option value="2">IACUC</option>
+                                    <option value="3">Conflict of Interest</option>
+                                    <option value="4">Proposals</option>
                                 </select>
                             </td>
                             <td class="content_info" style="text-align:left;">
@@ -1471,10 +1472,10 @@
                                 1
                             </td>
                             <td class="content_white" style="text-align:left;">
-                                Lorem
+                                IRB
                             </td>
                             <td class="content_white" style="text-align:left;">
-                            	Dolar
+                            	Research Facilities
                             </td>
                             <td class="content_white" style="text-align:left;">
                             	1.000
@@ -1488,47 +1489,13 @@
                                 2
                             </td>
                             <td class="content_white" style="text-align:left;">
-                                Lorem
+                                IACUC
                             </td>
                             <td class="content_white" style="text-align:left;">
-                            	Dolar
+                            	Research Facilities
                             </td>
                             <td class="content_white" style="text-align:left;">
-                            	1.000
-                            </td>
-                            <td class="content_white" style="text-align:center;">
-                            	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated questionnaire use.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="content_grey" style="text-align:center;">
-                                3
-                            </td>
-                            <td class="content_white" style="text-align:left;">
-                                Lorem
-                            </td>
-                            <td class="content_white" style="text-align:left;">
-                            	Dolar
-                            </td>
-                            <td class="content_white" style="text-align:left;">
-                            	1.000
-                            </td>
-                            <td class="content_white" style="text-align:center;">
-                            	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated questionnaire use.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="content_grey" style="text-align:center;">
-                                4
-                            </td>
-                            <td class="content_white" style="text-align:left;">
-                                Lorem
-                            </td>
-                            <td class="content_white" style="text-align:left;">
-                            	Dolar
-                            </td>
-                            <td class="content_white" style="text-align:left;">
-                            	1.000
+                            	1.001
                             </td>
                             <td class="content_white" style="text-align:center;">
                             	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated questionnaire use.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
