[BFN] KRAFUNC-188 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6591 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-meeting.html
+++ b/kra-com-dev/irb-meeting.html
@@ -173,7 +173,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     	<select>
                             <option value="0" selected="selected">select</option>
                             <option value="1">Scheduled</option>
-                            <option value="2">Cancelled</option>
+                            <option value="2">Canceled</option>
                             <option value="2">Agenda Closed</option>
                             <option value="2">Committee Has Met</option>
                         </select>
@@ -714,7 +714,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     </td>
                     <td class="infoline" style="text-align:center;">
                     	<input type="text" style="width:20px;" value="" />
-                        <input name="x" src="../images/book_open.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
+                        <input name="x" src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                     </td>
                     <td class="infoline" style="text-align:center;"><input src="../images/tinybutton-add1.gif" onclick="javascript: alert('This would add the indicated data row.'); return false" class="tinybutton" alt="add" title="Add" type="image" /></td>
                 </tr>
