--- a/kra-ip-dev/1-prop-proposal.html
+++ b/kra-ip-dev/1-prop-proposal.html
@@ -116,7 +116,7 @@ function addLoadEvent(func) {
 //--></script>
 <form>
   <div class="headerarea-kra" id="headerarea">
-    <h1>Institutional Proposal <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
+    <h1>Institute Proposal <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
     <h1 class="hidden">tab name goes here (accessibility requirement)</h1>
     <h1 class="hidden">tab name goes here (accessibility requirement)</h1>
     <div class="headerbox">
@@ -432,7 +432,7 @@ function addLoadEvent(func) {
             </table>
             <br>
             <div class="h2-container"><span class="subhead-left">
-w              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
+Project Periods and Amounts </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellpadding=0 cellspacing=0 summary="view/edit document overview information">
               <tr>
                 <th width="25%" align=right valign=middle>&nbsp;</th>
