--- a/kra-ip-dev/1-prop-specialreview.html
+++ b/kra-ip-dev/1-prop-specialreview.html
@@ -109,7 +109,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G1" style="display: nonee;">
+        <div class="tab-container" align="center" id="G1" style="display: none;">
           <div class="tab-container-error"> </div>
           <div class="h2-container">
             <h2><span class="subhead-left">Special Review</span></h2>
