--- a/kra-ip-dev/1-prop-intelprop-maint.html
+++ b/kra-ip-dev/1-prop-intelprop-maint.html
@@ -141,7 +141,7 @@ function MM_goToURL() { //v3.0
             </tr>
           </table>
           <!-- TAB -->
-          <div class="tab-container" align="center" id="G02" style="display: nonee;">
+          <div class="tab-container" align="center" id="G02" style="display: none;">
             <div class="h2-container">
               <h2><span class="subhead-left"> Review Data</span></h2>
               <span class="subhead-right"> <a href="asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a> </span> </div>
@@ -191,7 +191,7 @@ function MM_goToURL() { //v3.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G03" style="display: nonee;">
+          <div class="tab-container" align="center" id="G03" style="display: none;">
             <div class="h2-container">
               <h2><span class="subhead-left">Activities </span></h2>
               <span class="subhead-right"> <a href="asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a> </span> </div>
